--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 
 <body>
     <div id="wrapper">
+
+        <div class="antenna-top"></div>
+        <div class="antenna-base"></div>
+        <div class="antenna-height"></div>
         <div class="main"></div>
         <div class="top-lip"></div>
        <div class="left-cheek"></div>
