--- a/index.html
+++ b/index.html
@@ -15,11 +15,27 @@
         <div class="antenna-base"></div>
         <div class="antenna-height"></div>
         <div class="main"></div>
+        <div class="eye-left">
+            <div class="eye-pupil eye-pupil-left"></div>
+        </div>
+        <div class="eye-right">
+            <div class="eye-pupil eye-pupil-right"></div>
+        </div>
+        <div class="eyes-above"></div>
+        <div class="eyes-hole"></div>
+        <div class="eyes-top-space"></div>
+        <div class="eyes-right-space"></div>
+        <div class="eyes-left-space"></div>
         <div class="top-lip"></div>
        <div class="left-cheek"></div>
        <div class="bottom-jaw"></div>
        <div class="mid-teeth"></div>
        <div class="side-teeth"></div>
+       <div class="teeth-h1 teeth-h"></div>
+       <div class="teeth-h2 teeth-h"></div>
+       <div class="teeth-v1 teeth-v"></div>
+       <div class="teeth-v2 teeth-v"></div>
+       <div class="teeth-v3 teeth-v"></div>
     </div>
 </body>
 
